feat(infra): fixed agents md